# secmaster

./: .env.example  .gitignore  NEXT_STEPS.md  docker-compose.yml  mise.toml  otc-secmaster-handoff.md  pyproject.toml
app/: auth.py  config.py  main.py
app/api/: deps.py
app/api/v1/: api_keys.py  issuers.py  listings.py  securities.py
app/db/: session.py
app/ingestion/: base.py  cli.py  fidelity.py
app/models/: __init__.py  classification.py  corporate_action.py  issuer.py  listing.py  security.py  shares_outstanding.py  user.py  vendor.py
app/services/: point_in_time.py
docs/superpowers/plans/: 2026-03-18-secmaster-backend.md  2026-03-20-fidelity-ingestor.md
docs/superpowers/specs/: 2026-03-17-secmaster-product-design.md  2026-03-20-fidelity-ingestor-design.md
migrations/: env.py
migrations/versions/: 98012760f449_initial_schema.py
tests/: conftest.py  test_db_connection.py
tests/test_api/: test_api_keys.py  test_auth.py  test_issuers.py  test_listings.py  test_rate_limit.py  test_securities.py
tests/test_ingestion/: test_base.py
tests/test_models/: test_issuer.py  test_listing.py  test_security.py  test_supporting.py  test_user.py
tests/test_services/: test_point_in_time.py
